# aicheck

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.de.md  README.es.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.de.md  README.en.md  README.es.md  README.hi.md  README.ja.md  README.ko.md  README.zh-CN.md
locales/: de.yml  en.yml  es.yml  hi.yml  ja.yml  ko.yml  zh-CN.yml
scripts/: generate_aihubmix_all_models.py  generate_aihubmix_media.py
src/: cli.rs  i18n.rs  known_tools.rs  lib.rs  main.rs  output.rs  scanner.rs
src/detector/: audio_spectral.rs  c2pa_detector.rs  exif.rs  filename.rs  id3_metadata.rs  mod.rs  mp4_metadata.rs  png_text.rs  visible_watermark.rs  watermark.rs  wav_metadata.rs  xmp.rs
tests/: aihubmix_detection.rs  audio_detection.rs  audio_id3.rs  image_detection.rs  video_c2pa.rs  video_detection.rs  watermark_detection.rs
