[package]
name = "aicheck"
version = "0.1.0"
edition = "2021"
description = "Detect AI-generated content via provenance signals (C2PA, XMP/IPTC, EXIF)"
license = "MIT"
repository = "https://github.com/MatrixA/aicheck"
homepage = "https://github.com/MatrixA/aicheck"
keywords = ["ai-detection", "c2pa", "watermark", "metadata", "forensics"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "aic"
path = "src/main.rs"

[dependencies]
anyhow = "1"
c2pa = { version = "0.77", features = ["file_io"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
infer = "0.19"
kamadak-exif = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
id3 = "1"
rustfft = "6"
quick-xml = "0.36"
rust-i18n = "3"
sys-locale = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
